--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
+    "flash": "^1.1.0",
+    "logger": "^0.0.1",
     "method-override": "^3.0.0",
     "mongodb": "^3.6.5",
-    "mongoose": "^5.12.3",
+    "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.7",
+    "node": "^18.9.0",
+    "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "session": "^0.1.0",
     "validator": "^13.6.0"
   }
 }
