--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node": "^18.9.0",
+    "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
